<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profil">

    <ImageView
        android:id="@+id/bgprofil"
        android:contentDescription="@string/bg_profil"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@color/BiruCerah"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

<!--        app:srcCompat="@drawable/warna_bg_profil"-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/nama_mahir"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/bgprofil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth="wrap_content" />

    <ImageView
        android:id="@+id/backIco"
        android:contentDescription="@string/icon_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_back"
        />

    <ImageView
        android:id="@+id/searchIcon"
        android:contentDescription="@string/icon_search"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="9dp"
        app:srcCompat="@drawable/icon_search"
        />

    <ImageView
        android:id="@+id/menuIcon"
        android:contentDescription="@string/icon_menu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@drawable/icon_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="9dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/bg_profil"
        android:layout_width="100dp"
        android:layout_height="110dp"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/bunder"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="90dp" />

    <ImageView
        android:id="@+id/profil"
        android:contentDescription="@string/profil"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/frame_bulat"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="22dp"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bernard"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="100dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        android:text="Edit Profil"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/namaakun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="224dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nama_mahir"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="16dp"
        android:text="@string/username"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/namaakun"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>